MFH: Fixed bug #25218 ("deflate" compressed pages had a gzip header, which should only be sent with "gzip" compressed pages).